--- a/home.html
+++ b/home.html
@@ -79,21 +79,21 @@ img {
 
     <!-- Add more sections or links as needed -->
 <div class="gallery">
-    <img src="img/image 1.jpg" width="400" height="400" alt="Description 1">
-    <img src="img/image 2.jpg"width="400" height="400" alt="Description 2">
-    <img src="img/image 3.jpg"width="400" height="400" alt="Description 3">
-    <img src="img/image 4.jpg"width="400" height="400" alt="Description 4">
-    <img src="img/image 5.jpg" width="400" height="400" alt="Description 5">
-    <img src="img/image 6.jpg"width="400" height="400" alt="Description 6">
-    <img src="img/image 7.jpg"width="400" height="400" alt="Description 7">
-    <img src="img/image 8.jpg"width="400" height="400" alt="Description 8">
-    <img src="img/image 9.jpg"width="400" height="400" alt="Description 9">
-    <img src="img/image 10.jpg"width="400" height="400" alt="Description 10">
-    <img src="img/image 11.jpg"width="400" height="400" alt="Description 11">
-    <img src="img/image 12.jpg"width="400" height="400" alt="Description 12">
-    <img src="img/image 13.jpg"width="400" height="400" alt="Description 13">
-    <img src="img/image14.jpg"width="400" height="400" alt="Description 14">
-    <img src="img/image 15.jpg"width="400" height="400" alt="Description 15">
+    <img src="image 1.jpg" width="400" height="400" alt="Description 1">
+    <img src="image 2.jpg"width="400" height="400" alt="Description 2">
+    <img src="image 3.jpg"width="400" height="400" alt="Description 3">
+    <img src="image 4.jpg"width="400" height="400" alt="Description 4">
+    <img src="image 5.jpg" width="400" height="400" alt="Description 5">
+    <img src="image 6.jpg"width="400" height="400" alt="Description 6">
+    <img src="image 7.jpg"width="400" height="400" alt="Description 7">
+    <img src="image 8.jpg"width="400" height="400" alt="Description 8">
+    <img src="image 9.jpg"width="400" height="400" alt="Description 9">
+    <img src="image 10.jpg"width="400" height="400" alt="Description 10">
+    <img src="image 11.jpg"width="400" height="400" alt="Description 11">
+    <img src="image 12.jpg"width="400" height="400" alt="Description 12">
+    <img src="image 13.jpg"width="400" height="400" alt="Description 13">
+    <img src="image14.jpg"width="400" height="400" alt="Description 14">
+    <img src="image 15.jpg"width="400" height="400" alt="Description 15">
     <!-- Add more images as needed -->
 </div>
 </body>
