--- a/portfolio.html
+++ b/portfolio.html
@@ -42,7 +42,7 @@
     <p>Welcome to my portfolio! Here, you can explore some of the projects I've worked on.</p>
 
     <div class="project">
-        <img src="img/project 1.jpg" alt="Project 1">
+        <img src="project 1.jpg" alt="Project 1">
         <div class="project-description">
             <h2>Project 1</h2>
             <b><p>Description of Project 1.</p></b>
@@ -51,7 +51,7 @@
     </div>
 
     <div class="project">
-        <img src="img/project 2.jpg" alt="Project 2">
+        <img src="project 2.jpg" alt="Project 2">
         <div class="project-description">
             <h2>Project 2</h2>
            <b> <p>Description of Project 2.</p></b>
@@ -60,7 +60,7 @@
     </div>
 </div>
     <div class="project">
-        <img src="img/project 3.jpg" alt="Project 3">
+        <img src="project 3.jpg" alt="Project 3">
         <div class="project-description">
             <h2>Project 3</h2>
            <b> <p>Description of Project 3.</p></b> 
@@ -69,7 +69,7 @@
            </div>
            </div>
             <div class="project">
-        <img src="img/project 4.jpg" alt="Project 4">
+        <img src="project 4.jpg" alt="Project 4">
         <div class="project-description">
             <h2>Project 4</h2>
            <b> <p>Description of Project 4.</p></b> 
@@ -78,7 +78,7 @@
            </div>
            </div>
             <div class="project">
-        <img src="img/project 5.jpg" alt="Project 5">
+        <img src="project 5.jpg" alt="Project 5">
         <div class="project-description">
             <h2>Project 5</h2>
            <b> <p>Description of Project 5.</p></b> 
@@ -87,7 +87,7 @@
            </div>
            </div>
             <div class="project">
-        <img src="img/project 6.jpg" alt="Project 6">
+        <img src="project 6.jpg" alt="Project 6">
         <div class="project-description">
             <h2>Project 6</h2>
            <b> <p>Description of Project 6.</p></b> 
