--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 body {
     height: 100vh;
     width: 1%;
-    background: url("img/wallpaper 5.jpg") 
+    background: url("wallpaper 5.jpg") 
     center/cover no-repeat;
 }
 
@@ -375,7 +375,7 @@ form button:hover {
         <nav class="navbar">
             <span class="hamburger-btn material-symbols-rounded">menu</span>
             <div class="logo">
-        <img src="img/logo.png" width="70" height="70" alt="Codeliber"/>
+        <img src="logo.png" width="70" height="70" alt="Codeliber"/>
         
       </div>
       
