--- a/home.html
+++ b/home.html
@@ -103,12 +103,12 @@ img {
 <footer>
     <ul class="social-icons">
         <!-- Replace the href values with your actual social media links -->
-        <li><a href="#" target="_blank"><i class="fab fa-facebook"></i></a></li>
-        <li><a href="#" target="_blank"><i class="fab fa-twitter"></i></a></li>
-        <li><a href="#" target="_blank"><i class="fab fa-instagram"></i></a></li>
-                <li><a href="#" target="_blank"><i class="fab fa-whatsapp""></i></a></li>
-                        <li><a href="#" target="_blank"><i class="fab fa-linkedin"></i></a></li>
-                        <li><a href="#" target="blank"><i class="fab fa-tiktok"></i></a></li>
+        <li><a href="#" target="_blank"><i class="fab fa-facebook">Facebook</i></a></li>
+        <li><a href="#" target="_blank"><i class="fab fa-twitter">Twitter</i></a></li>
+        <li><a href="#" target="_blank"><i class="fab fa-instagram">Instagram</i></a></li>
+                <li><a href="#" target="_blank"><i class="fab fa-whatsapp"">WhatsApp</i></a></li>
+                        <li><a href="#" target="_blank"><i class="fab fa-linkedin">LinkedIn</i></a></li>
+                        <li><a href="#" target="blank"><i class="fab fa-tiktok">Tiktok</i></a></li>
     </ul>
 </footer>
 
