--- a/about.me.html
+++ b/about.me.html
@@ -65,7 +65,7 @@
     </ul>
 
     <h2>Contact</h2>
-    <p>Feel free to reach out to me at. <a href="mailtoquduswasiu153@gmail.com" </a>Mail Me</p>
+    <p>Feel free to reach out to me at. <a href="mailto:quduswasiu153@gmail.com" </a>Mail Me</p>
     <a href="https://wa.me/+2349061865872"</a>Chat Me</p>
     </div>
 <br>
