--- a/home.html
+++ b/home.html
@@ -95,9 +95,9 @@ img {
     <img src="image14.jpg"width="400" height="400" alt="Description 14">
     <img src="image 15.jpg"width="400" height="400" alt="Description 15">    
     <img src="images 16.jpg"width="400" height="400" alt="Description 16">
-    <img src="images 17.jpg"width="400" height="400" alt="Description 17">
+    <img src="image 17.jpg"width="400" height="400" alt="Description 17">
     <img src="images 18.jpg"width="400" height="400" alt="Description 18">
-    <img src="images 19.jpg"width="400" height="400" alt="Description 19">
+    <img src="image 19.jpg"width="400" height="400" alt="Description 19">
     <!-- Add more images as needed -->
 </div>
 </body>
