--- a/home.html
+++ b/home.html
@@ -98,6 +98,8 @@ img {
     <img src="image 17.jpg"width="400" height="400" alt="Description 17">
     <img src="images 18.jpg"width="400" height="400" alt="Description 18">
     <img src="image 19.jpg"width="400" height="400" alt="Description 19">
+    <img src="image 20.jpg" width="400" height="400" alt=" Description 20">
+    <img src="image 21.jpg" width="400" height="400" alt="Description 21">
     <!-- Add more images as needed -->
 </div>
 </body>
@@ -107,12 +109,11 @@ img {
 <footer>
     <ul class="social-icons">
         <!-- Replace the href values with your actual social media links -->
-        <li><a href="#" target="_blank"><i class="fab fa-facebook">Facebook</i></a></li>
-        <li><a href="#" target="_blank"><i class="fab fa-twitter">Twitter</i></a></li>
-        <li><a href="#" target="_blank"><i class="fab fa-instagram">Instagram</i></a></li>
-                <li><a href="#" target="_blank"><i class="fab fa-whatsapp"">WhatsApp</i></a></li>
-                        <li><a href="#" target="_blank"><i class="fab fa-linkedin">LinkedIn</i></a></li>
-                        <li><a href="#" target="blank"><i class="fab fa-tiktok">Tiktok</i></a></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100088807966045" target="_blank"><i class="fab fa-facebook">Facebook</i></a>
+        <li><a href="#" target="_blank"><i class="fab fa-instagram">Instagram</i></a>
+         <li><a href="https://wa.me/+2349061865872" target="_blank"><i class="fab fa-whatsapp"">WhatsApp</a></li>
+         <li><a href="https://t.me/Iam_qudus" target="_blank"><i class="fab fa-telegram">Telegram</i></a>
+        <li><a href="https://www.tiktok.com/@douglass816?_t=8kTquSSsgNx&_r=1" target="blank"><i class="fab fa-tiktok">Tiktok</i></a>    
     </ul>
 </footer>
 
