--- a/home.html
+++ b/home.html
@@ -109,7 +109,7 @@ img {
 <footer>
     <ul class="social-icons">
         <!-- Replace the href values with your actual social media links -->
-        <li><a href="https://www.facebook.com/profile.php?id=100088807966045" target="_blank"></a><i class="fab fa-facebook">Facebook</i></li>
+        <li><a href="https://www.facebook.com/profile.php?id=100088807966045" target="_blank"><i class="fab fa-facebook">Facebook</i></a></li>
         <li><a href="https://www.instagram.com/iamqudus_69?igsh=ZDExYjZkNGI0OA==" target="_blank"></a><i class="fab fa-instagram">Instagram</i></li>
          <li><a href="https://wa.me/+2349061865872" target="_blank"></a><i class="fab fa-whatsapp">WhatsApp</i></li>
          <li><a href="https://t.me/Iam_qudus" target="_blank"></a><i class="fab fa-telegram">Telegram</i></li>
