--- a/home.html
+++ b/home.html
@@ -110,10 +110,10 @@ img {
     <ul class="social-icons">
         <!-- Replace the href values with your actual social media links -->
         <li><a href="https://www.facebook.com/profile.php?id=100088807966045" target="_blank"><i class="fab fa-facebook">Facebook</i></a></li>
-        <li><a href="https://www.instagram.com/iamqudus_69?igsh=ZDExYjZkNGI0OA==" target="_blank"></a><i class="fab fa-instagram">Instagram</i></li>
-         <li><a href="https://wa.me/+2349061865872" target="_blank"></a><i class="fab fa-whatsapp">WhatsApp</i></li>
-         <li><a href="https://t.me/Iam_qudus" target="_blank"></a><i class="fab fa-telegram">Telegram</i></li>
-        <li><a href="https://www.tiktok.com/@douglass816?_t=8kTquSSsgNx&_r=1" target="blank"></a><i class="fab fa-tiktok">Tiktok</i></li>    
+        <li><a href="https://www.instagram.com/iamqudus_69?igsh=ZDExYjZkNGI0OA==" target="_blank"><i class="fab fa-instagram">Instagram</i></a></li>
+         <li><a href="https://wa.me/+2349061865872" target="_blank"><i class="fab fa-whatsapp">WhatsApp</i></a></li>
+         <li><a href="https://t.me/Iam_qudus" target="_blank"><i class="fab fa-telegram">Telegram</i></a></li>
+        <li><a href="https://www.tiktok.com/@douglass816?_t=8kTquSSsgNx&_r=1" target="blank"><i class="fab fa-tiktok">Tiktok</i></a></li>    
     </ul>
 </footer>
 
